--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,32 +9,101 @@ license = { text = "MIT" }
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "python-dotenv>=1.0.0",
-    "pydantic[email]>=2.6.1",
-    "fastapi>=0.109.1",
-    "uvicorn>=0.27.0",
-    "uvloop>=0.19.0",
-    "httptools>=0.6.1",
-    "uuid>=1.30",
-    "alembic>=1.13.1",
-    "asyncpg>=0.29.0",
-    "SQLAlchemy-Utils>=0.41.1",
-    "python-jose>=3.3.0",
-    "SQLAlchemy>=2.0.25",
-    "pytest>=7.4.2",
-    "python-multipart>=0.0.9",
-    "greenlet>=2.0.2",
-    "httpx>=0.26.0",
-    "pydantic-settings>=2.0.3",
-    "redis>=5.0.1",
-    "arq>=0.25.0",
-    "gunicorn>=22.0.0",
-    "bcrypt>=4.1.1",
-    "faker>=26.0.0",
-    "psycopg2-binary>=2.9.9",
-    "pytest-mock>=3.14.0",
-    "fastcrud>=0.15.5",
-    "langchain-community"
+    "aiohappyeyeballs==2.6.1",
+    "aiohttp==3.11.18",
+    "aiosignal==1.3.2",
+    "alembic==1.15.2",
+    "annotated-types==0.7.0",
+    "anyio==4.9.0",
+    "arq==0.26.3",
+    "asyncpg==0.30.0",
+    "attrs==25.3.0",
+    "bcrypt==4.3.0",
+    "beautifulsoup4==4.13.4",
+    "certifi==2025.1.31",
+    "charset-normalizer==3.4.1",
+    "click==8.1.8",
+    "coloredlogs==15.0.1",
+    "dataclasses-json==0.6.7",
+    "dnspython==2.7.0",
+    "ecdsa==0.19.1",
+    "email-validator==2.2.0",
+    "faker==37.1.0",
+    "fastapi==0.115.12",
+    "fastcrud==0.15.7",
+    "flatbuffers==25.2.10",
+    "frozenlist==1.6.0",
+    "greenlet==3.2.0",
+    "gunicorn==23.0.0",
+    "h11==0.14.0",
+    "hiredis==3.1.0",
+    "httpcore==1.0.8",
+    "httptools==0.6.4",
+    "httpx==0.28.1",
+    "httpx-sse==0.4.0",
+    "humanfriendly==10.0",
+    "idna==3.10",
+    "iniconfig==2.1.0",
+    "jsonpatch==1.33",
+    "jsonpointer==3.0.0",
+    "langchain==0.3.23",
+    "langchain-community==0.3.21",
+    "langchain-core==0.3.55",
+    "langchain-text-splitters==0.3.8",
+    "langsmith==0.3.33",
+    "magika==0.6.1",
+    "mako==1.3.10",
+    "markdownify==1.1.0",
+    "markitdown==0.1.1",
+    "markupsafe==3.0.2",
+    "marshmallow==3.26.1",
+    "mpmath==1.3.0",
+    "multidict==6.4.3",
+    "mypy-extensions==1.1.0",
+    "numpy==2.2.5",
+    "onnxruntime==1.21.1",
+    "orjson==3.10.16",
+    "packaging==24.2",
+    "pluggy==1.5.0",
+    "propcache==0.3.1",
+    "protobuf==6.30.2",
+    "psycopg2-binary==2.9.10",
+    "pyasn1==0.4.8",
+    "pydantic==2.11.3",
+    "pydantic-core==2.33.1",
+    "pydantic-settings==2.9.1",
+    "pytest==8.3.5",
+    "pytest-mock==3.14.0",
+    "python-dotenv==1.1.0",
+    "python-jose==3.4.0",
+    "python-multipart==0.0.20",
+    "pyyaml==6.0.2",
+    "redis==5.2.1",
+    "requests==2.32.3",
+    "requests-toolbelt==1.0.0",
+    "rsa==4.9.1",
+    "six==1.17.0",
+    "sniffio==1.3.1",
+    "soupsieve==2.7",
+    "sqlalchemy==2.0.40",
+    "sqlalchemy-utils==0.41.2",
+    "starlette==0.46.2",
+    "sympy==1.13.3",
+    "tenacity==9.1.2",
+    "typing-extensions==4.13.2",
+    "typing-inspect==0.9.0",
+    "typing-inspection==0.4.0",
+    "tzdata==2025.2",
+    "urllib3==2.4.0",
+    "uuid==1.30",
+    "uvicorn==0.34.2",
+    "uvloop==0.21.0",
+    "yarl==1.20.0",
+    "zstandard==0.23.0",
+    "openai==1.75.0",
+    "pymilvus==2.5.6",
+    "Jinja2==3.1.6",
+    "langchain-openai==0.3.14",
 ]
 
 [build-system]
