--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,185 +1,174 @@
+version: "3.8" # Specify a version for clarity and feature compatibility
+
 services:
 
+  # --- Milvus Vector Database Stack ---
   milvus:
-    image: milvusdb/milvus:v2.3.3
-    container_name: milvus-standalone
+    image: milvusdb/milvus:v2.3.9
+    container_name: milvus-standalone # More descriptive name
+    restart: always
     command: ["milvus", "run", "standalone"]
+    ports:
+      - "19530:19530" # gRPC port
+      - "9091:9091"   # HTTP port
     environment:
       ETCD_ENDPOINTS: etcd:2379
       MINIO_ADDRESS: minio:9000
+      # Milvus needs Minio credentials
+      MINIO_ACCESS_KEY_ID: minioadmin
+      MINIO_SECRET_ACCESS_KEY: minioadmin
     volumes:
       - milvus-data:/var/lib/milvus
-    ports:
-      - "19530:19530"
-      - "9091:9091"
     depends_on:
-      - etcd
-      - minio
-    restart: always
+      etcd:
+        condition: service_healthy # Wait for etcd to be healthy
+      minio:
+        condition: service_healthy # Wait for minio to be healthy
     healthcheck:
+      # Check Milvus HTTP health endpoint
       test: ["CMD", "curl", "-f", "http://localhost:9091/healthz"]
-      interval: 30s
-      timeout: 20s
-      retries: 3
-  # Etcd service for Milvus
+      interval: 5s
+      timeout: 3s
+      retries: 5
+      start_period: 10s # Give Milvus time to start before checking
+
   etcd:
-    image: quay.io/coreos/etcd:v3.5.5
-    container_name: milvus-etcd
-    environment:
-      - ETCD_AUTO_COMPACTION_MODE=revision
-      - ETCD_AUTO_COMPACTION_RETENTION=1000
-      - ETCD_QUOTA_BACKEND_BYTES=4294967296
-      - ETCD_SNAPSHOT_COUNT=50000
-    volumes:
-      - etcd-data:/etcd
-    command: etcd -advertise-client-urls=http://127.0.0.1:2379 -listen-client-urls http://0.0.0.0:2379 --data-dir /etcd
+    image: quay.io/coreos/etcd:v3.5.5 # Using a specific stable version
+    container_name: etcd
     restart: always
-    healthcheck:
-      test: ["CMD", "etcdctl", "endpoint", "health"]
-      interval: 30s
-      timeout: 20s
-      retries: 3
-  # MinIO service for Milvus
-  minio:
-    image: minio/minio:RELEASE.2023-03-20T20-16-18Z
-    container_name: milvus-minio
     environment:
-      MINIO_ACCESS_KEY: minioadmin
-      MINIO_SECRET_KEY: minioadmin
+      # Use map format consistently
+      ALLOW_NONE_AUTHENTICATION: "yes" # Quotes are good practice for boolean/numeric strings
+      ETCD_ENABLE_V2: "true"           # Quotes are good practice
+      ETCD_DATA_DIR: /etcd-data
+      ETCD_LISTEN_CLIENT_URLS: http://0.0.0.0:2379
+      ETCD_ADVERTISE_CLIENT_URLS: http://etcd:2379
     volumes:
-      - minio-data:/minio_data
-    command: minio server /minio_data
-    restart: always
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
-      interval: 30s
-      timeout: 20s
-      retries: 3
-  # Milvus UI (Attu)
-  milvus-ui:
-    image: zilliz/attu:v2.3.1
-    container_name: milvus-ui
-    environment:
-      MILVUS_URL: milvus:19530
+      - etcd-data:/etcd-data
     ports:
-      - "8001:3000"
-    depends_on:
-      - milvus
+      - "2379:2379"
+    healthcheck:
+      # Use etcdctl to check health (available in the image)
+      test: ["CMD", "etcdctl", "endpoint", "health"]
+      interval: 5s
+      timeout: 3s
+      retries: 5
+
+  minio:
+    # Use a known recent stable tag or your specified one
+    # image: minio/minio:RELEASE.2024-05-16T19-48-11Z # Known stable tag
+    image: minio/minio:RELEASE.2025-04-08T15-41-24Z-cpuv1 # Your specified tag
+    container_name: minio
     restart: always
+    environment:
+      MINIO_ROOT_USER: minioadmin
+      MINIO_ROOT_PASSWORD: minioadmin
+      MINIO_ACCESS_KEY: minioadmin # For compatibility if needed elsewhere
+      MINIO_SECRET_KEY: minioadmin # For compatibility if needed elsewhere
+    # Let Minio use its default entrypoint/command logic but add console address
+    command: server /data --console-address ":9001"
+    ports:
+      - "9000:9000" # Minio API Port (used by Milvus)
+      - "9001:9001" # Minio Console Port (for web access)
+    volumes:
+      - minio-data:/data
+    healthcheck:
+      # Use the mc command included in the image.
+      # Attempt to set an alias and check readiness within the healthcheck itself.
+      # Use CMD-SHELL to allow '&&'
+      test: ["CMD-SHELL", "mc alias set health_check http://localhost:9000 minioadmin minioadmin && mc ready health_check"]
+      interval: 10s # Increase interval slightly
+      timeout: 5s   # Increase timeout slightly
+      retries: 5
+      start_period: 15s # Give Minio more time to initialize before first check
+    # NO custom entrypoint here
+
+  # --- Application Stack ---
   web:
     build:
       context: .
       dockerfile: Dockerfile
-    # -------- replace with comment to run with gunicorn --------
-    command: uvicorn app.main:app --host 0.0.0.0 --port 9000 --reload
-    # command: gunicorn app.main:app -w 4 -k uvicorn.workers.UvicornWorker -b 0.0.0.09000:
+    container_name: web-app
+    restart: always
+    # -------- development command --------
+    command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload # Use standard port 8000 internally
+    # -------- production command (example) --------
+    # command: gunicorn app.main:app -w 4 -k uvicorn.workers.UvicornWorker -b 0.0.0.0:8000
     env_file:
-      - ./src/.env
+      - ./src/.env # Ensure this path is correct relative to docker-compose.yml
     environment:
-      - REDIS_HOST=redis
-      - REDIS_PORT=6379
-    # -------- replace with comment if you are using nginx --------
+      # Service discovery via container names
+      REDIS_HOST: redis
+      REDIS_PORT: 6379
+      MILVUS_URI: http://milvus:19530
+      # Ensure DB connection details are here or in .env
+      # DB_HOST: db
+      # DB_PORT: 5432
+      # DB_USER: user
+      # DB_PASSWORD: pass
+      # DB_NAME: db
     ports:
-      - "9000:9000"
-    # expose:
-    #   - "8000"
+      # Map host port 8003 to container port 8000 (internal standard)
+      - "8003:8000"
     depends_on:
-      - db
-      - redis
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+      milvus:
+        condition: service_healthy
     volumes:
-      - ./src/app:/code/app
-      - ./src/.env:/code/.env
+      - ./src/app:/code/app # Mount your application code
+      - ./src/.env:/code/.env # Mount your env file
 
   db:
     image: postgres:15-alpine
-    container_name: db
-    ports:
-      - "5432:5432"
+    container_name: postgres-db # More descriptive name
+    restart: always
     environment:
       POSTGRES_USER: user
-      POSTGRES_PASSWORD: pass
+      POSTGRES_PASSWORD: pass # Use secrets for production
       POSTGRES_DB: db
-    restart: always
+    ports:
+      - "5432:5432"
     volumes:
-      - "./dump:/dump"
+      - "./dump:/docker-entrypoint-initdb.d" # Scripts here run on init
       - postgres-data:/var/lib/postgresql/data
-    # ports:
-    #  - 5432:5432
+    healthcheck:
+      # Use pg_isready utility
+      test: ["CMD-SHELL", "pg_isready -U $$POSTGRES_USER -d $$POSTGRES_DB"]
+      interval: 5s
+      timeout: 3s
+      retries: 5
 
   redis:
     image: redis:alpine
+    container_name: redis-cache # More descriptive name
+    restart: always
     volumes:
       - redis-data:/data
-    expose:
-      - "6379"
+    healthcheck:
+      # Use redis-cli ping command
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 5s
+      timeout: 3s
+      retries: 5
 
-  #-------- uncomment to run with pgadmin --------
-  # pgadmin:
-  #   container_name: pgadmin4
-  #   image: dpage/pgadmin4:latest
-  #   restart: always
-  #   ports:
-  #     - "5050:80"
-  #   volumes:
-  #     - pgadmin-data:/var/lib/pgadmin
-  #   env_file:
-  #     - ./src/.env
-  #   depends_on:
-  #     - db
+  # --- Milvus UI (Attu) ---
+  milvus-ui:
+    image: zilliz/attu:v2.3.1
+    container_name: milvus-ui
+    restart: always
+    environment:
+      # Connect Attu to Milvus using the service name and gRPC port
+      MILVUS_URL: milvus:19530 # Attu usually connects via gRPC port
+    ports:
+      - "8001:3000" # Map host 8001 to Attu's default port 3000
+    depends_on:
+      milvus:
+        condition: service_healthy # Wait for Milvus itself
 
-  #-------- uncomment to run with nginx --------
-  # nginx:
-  #   image: nginx:latest
-  #   ports:
-  #     - "80:80"
-  #   volumes:
-  #     - ./default.conf:/etc/nginx/conf.d/default.conf
-  #   depends_on:
-  #     - web
-
-  #-------- uncomment to create first superuser --------
-  # create_superuser:
-  #   build:
-  #     context: .
-  #     dockerfile: Dockerfile
-  #   env_file:
-  #     - ./src/.env
-  #   depends_on:
-  #     - db
-  #     - web
-  #   command: python -m src.scripts.create_first_superuser
-  #   volumes:
-  #     - ./src:/code/src
-
-  #-------- uncomment to run tests --------
-  # pytest:
-  #   build:
-  #     context: .
-  #     dockerfile: Dockerfile
-  #   env_file:
-  #     - ./src/.env
-  #   depends_on:
-  #     - db
-  #     - redis
-  #   command: python -m pytest ./tests
-  #   volumes:
-  #     - .:/code
-
-  #-------- uncomment to create first tier --------
-  # create_tier:
-  #   build:
-  #     context: .
-  #     dockerfile: Dockerfile
-  #   env_file:
-  #     - ./src/.env
-  #   depends_on:
-  #     - db
-  #     - web
-  #   command: python -m src.scripts.create_first_tier
-  #   volumes:
-  #     - ./src:/code/src
-
-
+# --- Volumes Definition ---
 volumes:
   postgres-data:
   redis-data:
@@ -187,4 +176,9 @@ volumes:
   etcd-data:
   minio-data:
 
-  #pgadmin-data:
+# --- Network Definition (Optional but recommended) ---
+# networks:
+#   app-network:
+#     driver: bridge
+
+# Add 'networks: - app-network' to each service if using a custom network
