--- a/.env
+++ b/.env
@@ -29,6 +29,10 @@ REDIS_CACHE_PORT=6379
 REDIS_QUEUE_HOST=redis
 REDIS_QUEUE_PORT=6379
 
+# ------------- milvus -------------
+MILVUS_HOST=localhost
+MILVUS_PORT=19530
+
 REDIS_RATE_LIMIT_HOST=redis
 REDIS_RATE_LIMIT_PORT=6379
 
