--- a/pyproject.toml
+++ b/pyproject.toml
@@ -103,6 +103,9 @@ dependencies = [
     "pymilvus==2.5.6",
     "Jinja2==3.1.6",
     "langchain-openai==0.3.14",
+    "langgraph==0.2.17",
+    "langchain==0.3.23",
+    "langchain-community==0.3.21",
 ]
 
 [build-system]
