--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -23,8 +23,7 @@ services:
         condition: service_healthy
       milvus:
         condition: service_healthy
-    volumes:
-      - ./src/app/templates:/code/app/templates # Mount templates directory
+    # No volumes for code in production - templates are included in the Docker image
 
   db:
     image: postgres:15-alpine
