--- a/pyproject.toml
+++ b/pyproject.toml
@@ -106,6 +106,7 @@ dependencies = [
     "langgraph==0.2.17",
     "langchain==0.3.23",
     "langchain-community==0.3.21",
+    "langdetect==1.0.9",
 ]
 
 [build-system]
