--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ LICENSE_NAME="The license you picked"
 POSTGRES_USER=user
 POSTGRES_PASSWORD=pass
 POSTGRES_DB=db
-POSTGRES_SERVER=db
+POSTGRES_SERVER=localhost
 POSTGRES_PORT=5432
 
 # ------------- pgadmin -------------
