--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -101,6 +101,7 @@ services:
       REDIS_HOST: redis
       REDIS_PORT: 6379
       MILVUS_URI: http://milvus:19530
+      OPENAI_API_KEY: ${OPENAI_API_KEY}
       # Ensure DB connection details are here or in .env
       # DB_HOST: db
       # DB_PORT: 5432
